style: remove gsap opacity override from watermark, position signature precisely on 'made', contain cover arts to prevent clipping

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -82,10 +82,10 @@
 
 .hero__signature {
   position: absolute;
-  bottom: -60px;
-  right: -90px;
-  width: 320px;
-  height: 140px;
+  bottom: -40px;
+  left: 55%;
+  width: 250px;
+  height: 110px;
   z-index: 2;
   will-change: transform, opacity;
   pointer-events: none;
@@ -191,10 +191,10 @@
     font-size: 1.4rem;
   }
   .hero__signature {
-    width: 220px;
-    height: 100px;
-    bottom: -45px;
-    right: -50px;
+    width: 200px;
+    height: 90px;
+    bottom: -35px;
+    left: 55%;
   }
   .hero__buttons {
     margin-top: 50px;
@@ -224,10 +224,10 @@
     font-size: 1.1rem;
   }
   .hero__signature {
-    width: 160px;
-    height: 72px;
-    bottom: -30px;
-    right: -30px;
+    width: 140px;
+    height: 62px;
+    bottom: -20px;
+    left: 55%;
   }
   .hero__buttons {
     flex-direction: column;
